# logger

./: CMakeLists.txt  README.md  unit-test-report.md
examples/: main.cpp
include/: logger.hpp  socket_writer.hpp
src/: logger.cpp  socket_writer.cpp
tools/: log_stat_server.cpp  log_statistics.cpp  log_statistics.hpp
